--- a/style.css
+++ b/style.css
@@ -111,5 +111,5 @@ img{display:block; height:auto;}
 
 /* panel carrito */
 #cart-panel--wrapper{position:absolute; top:0; width:100%; height:100svh; transition:all .3s ease; right:-100%; z-index:2;}
-#panel-overlay{position:absolute; top:0; width:100%; height:100svh; transition-delay:.3s; transition:all .3s;}
+#panel-overlay{position:absolute; top:0; width:100%; height:100svh;}
 #cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:0; max-width:360px; height:100svh; overflow:hidden; transition:all .3s ease;}
