--- a/style.css
+++ b/style.css
@@ -112,4 +112,4 @@ img{display:block; height:auto;}
 /* panel carrito */
 #cart-panel--wrapper{position:absolute; top:0; width:100%; height:100svh; transition:all .3s ease; right:-100%; z-index:2;}
 #panel-overlay{position:absolute; top:0; width:100%; height:100svh;}
-#cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:0; max-width:360px; height:100svh; overflow:hidden; transition:all .3s ease;}
+#cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:0; max-width:360px; height:100svh; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease;}
