--- a/style.css
+++ b/style.css
@@ -113,4 +113,4 @@ img{display:block; height:auto;}
 #cart-panel--wrapper{position:absolute; top:0; width:100%; height:100svh; transition:all .3s ease; right:-100%; z-index:2;}
 #panel-overlay{position:absolute; top:0; width:100%; height:100svh;}
 #cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:0; max-width:360px; height:100svh; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease;}
-#close-cart-panel{padding-bottom:var(--padding-cart-panel); color:#fff; display:table; margin-left:auto; border-color:1px solid #464646;}
+#close-cart-panel{padding-bottom:var(--padding-cart-panel); color:#fff; display:flex; flex-direction:row-reverse; border-color:1px solid #464646;}
