panel de carrito

--- a/style.css
+++ b/style.css
@@ -126,6 +126,6 @@ img{display:block; height:auto;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-price{grid-column:3/4; grid-row:2/3;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity{grid-column:2/3; grid-row:2/3;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity label{display:none;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]{background-color:#333; color:#fff;}
+#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]{background-color:#333; border:none; width:20px; color:#fff;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]:focus{outline:none;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-subtotal{display:none;}
