--- a/style.css
+++ b/style.css
@@ -134,3 +134,6 @@ img{display:block; height:auto;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity button{background-color:#333; border:none; color:#fff; border-radius:0;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity button:focus{outline:none;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-subtotal{grid-column:3/4; grid-row:2/3;}
+#cart-panel .woocommerce .cart-collaterals .cart_totals h2{display:none;}
+#cart-panel .woocommerce .cart-collaterals .cart_totals .shop_table_responsive tbody .order-total{display:none;}
+#cart-panel .woocommerce .cart-collaterals .cart_totals .wc-proceed-to-checkout .checkout-button{display:grid; width:100%; height:44px; place-content:center; background-color:#111; color:#fff; margin-top:13px;}
