--- a/style.css
+++ b/style.css
@@ -137,5 +137,6 @@ img{display:block; height:auto;}
 #cart-panel .woocommerce .cart-collaterals .cart_totals h2{display:none;}
 #cart-panel .woocommerce .cart-collaterals .cart_totals .shop_table_responsive{width:100%;}
 #cart-panel .woocommerce .cart-collaterals .cart_totals .shop_table_responsive tbody .cart-subtotal{display:flex; align-items:center; justify-content:space-between; height:60px; border-top:1px solid #464646; border-bottom:1px solid #464646;}
+#cart-panel .woocommerce .cart-collaterals .cart_totals .shop_table_responsive tbody .cart-subtotal th{font-weight:400;}
 #cart-panel .woocommerce .cart-collaterals .cart_totals .shop_table_responsive tbody .order-total{display:none;}
 #cart-panel .woocommerce .cart-collaterals .cart_totals .wc-proceed-to-checkout .checkout-button{display:grid; width:100%; height:44px; place-content:center; background-color:#111; color:#fff; margin-top:13px;}
