--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ img{display:block; height:auto;}
 /* panel carrito */
 #cart-panel--wrapper{position:absolute; top:0; width:100%; height:100%; transition:all .3s ease; right:-100%; z-index:2;}
 #panel-overlay{position:absolute; top:0; width:100%; height:100%;}
-#cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:0; max-width:360px; height:100%; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease;}
+#cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:0; width:var(--width--cart-panel); height:100%; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease;}
 #close-cart-panel{padding-bottom:var(--padding-close--cart-panel); color:#fff; display:flex; flex-direction:row-reverse; border-bottom:1px solid #464646; border-radius:0;}
 #cart-panel .woocommerce{display:grid; grid-template-rows:auto 1fr auto; height:calc(100% - var(--spacing-cart));}
 #cart-panel .woocommerce .woocommerce-cart-form .shop_table_responsive{width:100%; border-collapse:separate; text-align:left;}
@@ -142,5 +142,5 @@ img{display:block; height:auto;}
 #cart-panel .woocommerce .cart-collaterals .cart_totals .shop_table_responsive tbody .cart-subtotal th{font-weight:400;}
 #cart-panel .woocommerce .cart-collaterals .cart_totals .shop_table_responsive tbody .order-total{display:none;}
 #cart-panel .woocommerce .cart-collaterals .cart_totals .wc-proceed-to-checkout .checkout-button{display:grid; width:100%; height:44px; place-content:center; background-color:#111; color:#fff; margin-top:13px;}
-#cart-panel .woocommerce .return-to-shop .button.wc-backward{border:1px solid #777; color:#fff; display:grid; place-content:center; width:100%; height:42px; transition:all .3s ease;}
+#cart-panel .woocommerce .return-to-shop .button.wc-backward{border:1px solid #777; color:#fff; display:grid; place-content:center; width:100%; height:42px; border-radius:0; transition:all .3s ease;}
 #cart-panel .woocommerce .return-to-shop .button.wc-backward:hover{border:1px solid #fff;}
