--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ Tags:
 /* ajustes globales */
 html{scroll-behavior:smooth;}
 *, :before, :after{box-sizing:border-box; margin:0;}
-body{position:relative;}
+body{position:relative; overflow-x:hidden;}
 main{background-color:var(--wp--preset--color--background); transition:all .3s ease;}
 :is(header,footer,aside,.resume-content) :is(ol,ul){padding:0; list-style:none;}
 a{transition:all .3s ease; border-radius:.2rem;}
@@ -110,7 +110,7 @@ img{display:block; height:auto;}
             #main-footer .social ul li a[href*="facebook"]:before{padding:9px 5px;}
 
 /* panel carrito */
-#cart-panel--wrapper{position:absolute; top:0; width:100%; height:100%; transition:all .3s ease; right:-100%; z-index:2;}
+#cart-panel--wrapper{position:fixed; top:0; width:100%; height:100%; transition:all .3s ease; right:-100%; z-index:2;}
 #panel-overlay{position:absolute; top:0; width:100%; height:100%;}
 #cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:0; width:var(--width--cart-panel); height:100%; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease;}
 #close-cart-panel{padding-bottom:var(--padding-close--cart-panel); color:#fff; display:flex; flex-direction:row-reverse; border-bottom:1px solid #464646; border-radius:0;}
