--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -1,76 +1,76 @@
 /* generales */
-#main .container.post-wrapper{padding-top:var(--padding-top--post-wrapper); background-color:var(--wp--preset--color--background);}
-#main .container .section{width:min(100% - 30px, 921.19px);}
-#main .container .section :is(.post, aside){padding-bottom:50px; max-width:803px; margin-inline:auto;}
-#main .container .section .post > *:not(:last-child){margin-bottom:24px;}
+.single-post #main .container.post-wrapper{padding-top:var(--padding-top--post-wrapper); background-color:var(--wp--preset--color--background);}
+.single-post #main .container .section{width:min(100% - 30px, 921.19px);}
+.single-post #main .container .section :is(.post, aside){padding-bottom:50px; max-width:803px; margin-inline:auto;}
+.single-post #main .container .section .post > *:not(:last-child){margin-bottom:24px;}
 
 /* imagen destacada */
-#main .container .featured-picture{width:100%; aspect-ratio:var(--aspect-ratio--featured-picture); object-fit:cover; max-width:921.29px; margin-inline:auto;}
+.single-post #main .container .featured-picture{width:100%; aspect-ratio:var(--aspect-ratio--featured-picture); object-fit:cover; max-width:921.29px; margin-inline:auto;}
 
 /* contenido */
     /* título */
-    #main .container .section .post .title{margin:44px auto 21px; text-align:center;}
+    .single-post #main .container .section .post .title{margin:44px auto 21px; text-align:center;}
     /* autor y fecha de publicación */
-    #main .container .section .post .author-and-date{font-size:var(--wp--preset--font-size--small); text-align:center; margin-bottom:35px;}
-    #main .container .section .post .author-and-date span{color:var(--wp--preset--color--title);}
+    .single-post #main .container .section .post .author-and-date{font-size:var(--wp--preset--font-size--small); text-align:center; margin-bottom:35px;}
+    .single-post #main .container .section .post .author-and-date span{color:var(--wp--preset--color--title);}
     /* citas */
-    #main .container .section .post .wp-block-quote{max-width:651px; margin-inline:auto;}
-    #main .container .section .post .wp-block-quote p{color:var(--wp--preset--color--title); text-align:center;}
+    .single-post #main .container .section .post .wp-block-quote{max-width:651px; margin-inline:auto;}
+    .single-post #main .container .section .post .wp-block-quote p{color:var(--wp--preset--color--title); text-align:center;}
     /* imágenes */
         /* galería */
-        #main .container .section .post .wp-block-image img{transition:all .3s ease;}
-        #main .container .section .post .wp-block-image img:hover{filter:brightness(1.15);}
-        #main .container .section .post .wp-block-image.size-full img{width:100%;}
-        #main .container .section .post .wp-block-gallery{display:grid; grid-template-columns:1fr 1fr;}
-        #main .container .section .post .wp-block-gallery .wp-block-image{position:relative;}
-        #main .container .section .post .wp-block-gallery .wp-block-image:before{content:''; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:1px; height:50px; background-color:transparent; z-index:1; transition:all .3s ease;}
-        #main .container .section .post .wp-block-gallery .wp-block-image:hover:before{background-color:#DC9814;}
-        #main .container .section .post .wp-block-gallery .wp-block-image:after{content:''; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:50px; height:1px; background-color:transparent; z-index:1; transition:all .3s ease;}
-        #main .container .section .post .wp-block-gallery .wp-block-image:hover:after{background-color:#DC9814;}
-        #main .container .section .post .wp-block-gallery .wp-block-image img{transition:all .3s ease;}
-        #main .container .section .post .wp-block-gallery .wp-block-image img:hover{filter:brightness(.3);}
+        .single-post #main .container .section .post .wp-block-image img{transition:all .3s ease;}
+        .single-post #main .container .section .post .wp-block-image img:hover{filter:brightness(1.15);}
+        .single-post #main .container .section .post .wp-block-image.size-full img{width:100%;}
+        .single-post #main .container .section .post .wp-block-gallery{display:grid; grid-template-columns:1fr 1fr;}
+        .single-post #main .container .section .post .wp-block-gallery .wp-block-image{position:relative;}
+        .single-post #main .container .section .post .wp-block-gallery .wp-block-image:before{content:''; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:1px; height:50px; background-color:transparent; z-index:1; transition:all .3s ease;}
+        .single-post #main .container .section .post .wp-block-gallery .wp-block-image:hover:before{background-color:#DC9814;}
+        .single-post #main .container .section .post .wp-block-gallery .wp-block-image:after{content:''; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:50px; height:1px; background-color:transparent; z-index:1; transition:all .3s ease;}
+        .single-post #main .container .section .post .wp-block-gallery .wp-block-image:hover:after{background-color:#DC9814;}
+        .single-post #main .container .section .post .wp-block-gallery .wp-block-image img{transition:all .3s ease;}
+        .single-post #main .container .section .post .wp-block-gallery .wp-block-image img:hover{filter:brightness(.3);}
         .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image),
         .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image):first-child:nth-last-child(2), 
         .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image):first-child:nth-last-child(2)~figure.wp-block-image:not(#individual-image){width:100%;}
     /* texto */
-    #main .container .section .post :is(p.has-title-color, p strong){color:var(--wp--preset--color--title)!important;} 
-    #main .container .section .post p.has-large-font-size{font-size:19px!important;}
+    .single-post #main .container .section .post :is(p.has-title-color, p strong){color:var(--wp--preset--color--title)!important;} 
+    .single-post #main .container .section .post p.has-large-font-size{font-size:19px!important;}
 
 /* aside */
-#main .container .section aside{display:grid; gap:15px;}
+.single-post #main .container .section aside{display:grid; gap:15px;}
     /* etiquetas y compartir */
-    #main .container .section aside .tags-and-share{display:grid; grid-template-columns:1fr auto; gap:10px; align-content:start;}
+    .single-post #main .container .section aside .tags-and-share{display:grid; grid-template-columns:1fr auto; gap:10px; align-content:start;}
         /* etiquetas */
-        #main .container .section aside .tags-and-share .tags{display:inline-flex; flex-wrap:wrap; gap:7px;}
-        #main .container .section aside .tags-and-share .tags a{position:relative; font-size:14px; background-color:var(--wp--preset--color--title); color:#fff; padding:5px 10px; border-radius:16.2px;}
-        #main .container .section aside .tags-and-share .tags a:before{content:'#';}
-        #main .container .section aside .tags-and-share .tags a:hover{background-color:var(--wp--preset--color--links);}
+        .single-post #main .container .section aside .tags-and-share .tags{display:inline-flex; flex-wrap:wrap; gap:7px;}
+        .single-post #main .container .section aside .tags-and-share .tags a{position:relative; font-size:14px; background-color:var(--wp--preset--color--title); color:#fff; padding:5px 10px; border-radius:16.2px;}
+        .single-post #main .container .section aside .tags-and-share .tags a:before{content:'#';}
+        .single-post #main .container .section aside .tags-and-share .tags a:hover{background-color:var(--wp--preset--color--links);}
         /* compartir */
-        #main .container .section aside .tags-and-share .share a{color:#a1a1a1;}
-        #main .container .section aside .tags-and-share .share a:hover{color:var(--wp--preset--color--title);}
-        #main .container .section aside .tags-and-share .share a:not(:last-child){margin-right:20px;}
-        #main .container .section aside .tags-and-share .share a svg{width:18px; height:18px;}
+        .single-post #main .container .section aside .tags-and-share .share a{color:#a1a1a1;}
+        .single-post #main .container .section aside .tags-and-share .share a:hover{color:var(--wp--preset--color--title);}
+        .single-post #main .container .section aside .tags-and-share .share a:not(:last-child){margin-right:20px;}
+        .single-post #main .container .section aside .tags-and-share .share a svg{width:18px; height:18px;}
     /* categorías */
-    #main .container .section aside .categories{display:inline-flex; gap:7px; font-size:14px;}
-    #main .container .section aside .categories .post-categories{display:inline-flex; flex-wrap:wrap; gap:7px;}
-    #main .container .section aside .categories .post-categories li{position:relative;}
-    #main .container .section aside .categories .post-categories li:not(:last-child):after{content:',';}
-    #main .container .section aside .categories .post-categories li:last-child{content:'.';}
+    .single-post #main .container .section aside .categories{display:inline-flex; gap:7px; font-size:14px;}
+    .single-post #main .container .section aside .categories .post-categories{display:inline-flex; flex-wrap:wrap; gap:7px;}
+    .single-post #main .container .section aside .categories .post-categories li{position:relative;}
+    .single-post #main .container .section aside .categories .post-categories li:not(:last-child):after{content:',';}
+    .single-post #main .container .section aside .categories .post-categories li:last-child{content:'.';}
 
 /* paginación */
-#main .container.pagination-wrapper{border-top:1px solid var(--wp--preset--color--line); background-color:var(--wp--preset--color--background);}
-#main .container .single-post-pagination{padding:var(--padding--single-post-pagination); width:var(--width-single-post-pagination); margin-inline:auto; display:flex; justify-content:space-between;}
-#main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link){display:grid; gap:0 10px; align-items:center;}
-#main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) .title-post{display:var(--single-post-pagination--title-post);}
-#main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) i{position:relative; top:2px; color:var(--wp--preset--color--text); grid-row:var(--single-post-pagination--svg-grid-row); font-size:var(--single-post-pagination--svg-size); opacity:.5;}
-#main .container .single-post-pagination .right .next-post-link i{grid-column:2/3;}
-#main .container .single-post-pagination .right .next-post-link :is(.pagination-indicator, .title-post){text-align:right;}
-#main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) .pagination-indicator{font-size:var(--wp--preset--font-size--small); color:var(--wp--preset--color--text); grid-row:1/2;}
-#main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) .title-post{color:var(--wp--preset--color--title); grid-row:2/3;}
+.single-post #main .container.pagination-wrapper{border-top:1px solid var(--wp--preset--color--line); background-color:var(--wp--preset--color--background);}
+.single-post #main .container .single-post-pagination{padding:var(--padding--single-post-pagination); width:var(--width-single-post-pagination); margin-inline:auto; display:flex; justify-content:space-between;}
+.single-post #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link){display:grid; gap:0 10px; align-items:center;}
+.single-post #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) .title-post{display:var(--single-post-pagination--title-post);}
+.single-post #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) i{position:relative; top:2px; color:var(--wp--preset--color--text); grid-row:var(--single-post-pagination--svg-grid-row); font-size:var(--single-post-pagination--svg-size); opacity:.5;}
+.single-post #main .container .single-post-pagination .right .next-post-link i{grid-column:2/3;}
+.single-post #main .container .single-post-pagination .right .next-post-link :is(.pagination-indicator, .title-post){text-align:right;}
+.single-post #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) .pagination-indicator{font-size:var(--wp--preset--font-size--small); color:var(--wp--preset--color--text); grid-row:1/2;}
+.single-post #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) .title-post{color:var(--wp--preset--color--title); grid-row:2/3;}
 
 /* comentarios · contenedor */
-#main .container.comments-wrapper{background-color:var(--wp--preset--color--background-comments); padding-bottom:57px;}
-#main .container .section.comments-section{width:min(100% - 30px, 803px);}
+.single-post #main .container.comments-wrapper{background-color:var(--wp--preset--color--background-comments); padding-bottom:57px;}
+.single-post #main .container .section.comments-section{width:min(100% - 30px, 803px);}
     /* comentarios */
     #comments{font-size:var(--wp--preset--font-size--x-large); color:var(--wp--preset--color--title); text-align:center; padding:68px 0 54px;}
     :is(.commentlist, .children){list-style:none;}
