--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -55,67 +55,44 @@
 }
 
 /* star rating · calificación */
-.woocommerce .star-rating {
-    float: right;
+#review_form .comment-form-rating .stars {
+    display: inline-block;
+    height: 28px;
     overflow: hidden;
-    position: relative;
-    height: 1em;
-    line-height: 1;
-    font-size: 1em;
-    width: 5.4em;
-    font-family: star
+    margin-bottom: 0;
+    margin-left: -7px
 }
 
-.woocommerce .star-rating::before {
-    content: "\e606\e606\e606\e606\e606";
-    color: #aaa;
-    float: left;
-    top: 0;
-    left: 0;
-    position: absolute
-}
-
-.woocommerce .star-rating span {
-    overflow: hidden;
-    float: left;
-    top: 0;
-    left: 0;
-    position: absolute;
-    padding-top: 1.5em
-}
-
-.woocommerce .star-rating span::before {
-    content: "\e606\e606\e606\e606\e606";
-    top: 0;
-    position: absolute;
-    left: 0
-}
-
-.woocommerce .woocommerce-product-rating {
-    line-height: 2;
+#review_form .comment-form-rating .stars span {
     display: block
 }
 
-.woocommerce .woocommerce-product-rating::after,.woocommerce .woocommerce-product-rating::before {
-    content: " ";
-    display: table
+#review_form .comment-form-rating .stars a {
+    position: relative;
+    display: inline-block;
+    color: inherit;
+    width: 23px;
+    text-indent: -1000em;
+    overflow: hidden
 }
 
-.woocommerce .woocommerce-product-rating::after {
-    clear: both
+#review_form .comment-form-rating .stars:hover a,#review_form .comment-form-rating .stars.has-active a {
+    color: #dc9814
 }
 
-.woocommerce .woocommerce-product-rating .star-rating {
-    margin: .5em 4px 0 0;
-    float: left
+#review_form .comment-form-rating .stars a:hover~a,#review_form .comment-form-rating .stars.has-active a.active~a {
+    color: inherit
 }
 
-.woocommerce .products .star-rating {
-    display: block;
-    margin: 0 0 .5em;
-    float: none
-}
-
-.woocommerce .hreview-aggregate .star-rating {
-    margin: 10px 0 0
+#review_form .comment-form-rating .stars a:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-family: 'nm-font';
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    content: "\e606";
+    text-indent: 0
 }
