--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -15,7 +15,7 @@
     line-height: 26px;
     width: 116px;
     height: 26px;
-    overflow: hidden
+    overflow: hidden;
 }
 
 .woocommerce-product-rating .star-rating:before,
@@ -27,7 +27,7 @@
     font-weight: 400;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    line-height: 26px
+    line-height: 26px;
 }
 
 .woocommerce-product-rating .star-rating:before {
@@ -35,7 +35,7 @@
     content: "\e61f\e61f\e61f\e61f\e61f";
     font-size: 7px;
     color: #aaa;
-    letter-spacing: 15px
+    letter-spacing: 15px;
 }
 
 .woocommerce-product-rating .star-rating span:before {
@@ -43,7 +43,7 @@
     content: "\e606\e606\e606\e606\e606";
     font-size: 27px;
     color: #dc9814;
-    letter-spacing: -5px
+    letter-spacing: -5px;
 }
 
 .woocommerce-product-rating .star-rating span {
@@ -51,7 +51,7 @@
     top: 0;
     left: 0;
     padding-top: 26px;
-    overflow: hidden
+    overflow: hidden;
 }
 
 /* star rating · calificación */
@@ -60,7 +60,7 @@
     height: 28px;
     overflow: hidden;
     margin-bottom: 0;
-    margin-left: -7px
+    margin-left: -7px;
 }
 
 #review_form .comment-form-rating .stars span {
@@ -73,15 +73,15 @@
     color: inherit;
     width: 23px;
     text-indent: -1000em;
-    overflow: hidden
+    overflow: hidden;
 }
 
 #review_form .comment-form-rating .stars:hover a,#review_form .comment-form-rating .stars.has-active a {
-    color: #dc9814
+    color: #dc9814;
 }
 
 #review_form .comment-form-rating .stars a:hover~a,#review_form .comment-form-rating .stars.has-active a.active~a {
-    color: inherit
+    color: inherit;
 }
 
 #review_form .comment-form-rating .stars a:before {
@@ -94,5 +94,5 @@
     font-weight: 400;
     line-height: 1;
     content: "\e606";
-    text-indent: 0
+    text-indent: 0;
 }
