--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -81,7 +81,7 @@
 }
 
 #review_form .comment-form-rating .stars a:hover~a,#review_form .comment-form-rating .stars.has-active a.active~a {
-    color: inherit;
+    color: #dc9814;
 }
 
 #review_form .comment-form-rating .stars a:before {
