calificación mostrada con estrellas

--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -99,4 +99,4 @@
     text-indent: 0;
 }
 
-.comment-form-rating .stars.selected span .star-1.active{color:#dc9814;}
+.comment-form-rating .stars.selected span .star-1.active{color:#dc9814!important;}
