--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -101,3 +101,6 @@
 
 .comment-form-rating .stars.selected span .star-1.active{color:#dc9814!important;}
 .comment-form-rating .stars.selected span :is(.star-2.active, .star-1){color:#dc9814!important;}
+.comment-form-rating .stars.selected span :is(.star-3.active, .star-2, .star-1){color:#dc9814!important;}
+.comment-form-rating .stars.selected span :is(.star-4.active, .star-3, .star-2, .star-1){color:#dc9814!important;}
+.comment-form-rating .stars.selected span :is(.star-5.active, .star-4, .star-3, .star-2, .star-1){color:#dc9814!important;}
