--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -8,97 +8,26 @@
 /* datos del producto */
 #main .container.product-wrapper{background-color:var(--wp--preset--color--line);}
 
-/* summary */
-.star-rating {
-    position: relative;
-    display: inline-block;
-    line-height: 26px;
-    width: 116px;
-    height: 26px;
-    overflow: hidden;
-}
+/* navegación de galería */
+.flex-control-nav{padding-left:0; list-style:none;}
 
+/* star rating */
+.star-rating {position:relative; display:inline-block; line-height:26px; width:116px; height:26px; overflow:hidden;}
 .star-rating:before,
-.star-rating span:before {
-    position: absolute;
-    top: 0;
-    font-family: 'nm-font';
-    font-style: normal;
-    font-weight: 400;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    line-height: 26px;
-}
+.star-rating span:before{position:absolute; top:0; font-family:'nm-font'; font-style:normal; font-weight:400; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; line-height:26px;}
+.star-rating:before{left:9px; content:"\e61f\e61f\e61f\e61f\e61f"; font-size:7px; color:#aaa; letter-spacing:15px;}
+.star-rating span:before{left:0; content:"\e606\e606\e606\e606\e606"; font-size:27px; color:#dc9814; letter-spacing:-5px;}
+.star-rating span {position:absolute; top:0; left:0; padding-top:26px; overflow:hidden;}
 
-.star-rating:before {
-    left: 9px;
-    content: "\e61f\e61f\e61f\e61f\e61f";
-    font-size: 7px;
-    color: #aaa;
-    letter-spacing: 15px;
-}
-
-.star-rating span:before {
-    left: 0;
-    content: "\e606\e606\e606\e606\e606";
-    font-size: 27px;
-    color: #dc9814;
-    letter-spacing: -5px;
-}
-
-.star-rating span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding-top: 26px;
-    overflow: hidden;
-}
-
-/* star rating · calificación */
-#review_form .comment-form-rating .stars {
-    display: inline-block;
-    height: 28px;
-    overflow: hidden;
-    margin-bottom: 0;
-    margin-left: -7px;
-}
-
-#review_form .comment-form-rating .stars span {
-    display: block
-}
-
-#review_form .comment-form-rating .stars a {
-    position: relative;
-    display: inline-block;
-    color: inherit;
-    width: 23px;
-    text-indent: -1000em;
-    overflow: hidden;
-}
-
+/* star rating · puesta de calificación */
+#review_form .comment-form-rating .stars {display:inline-block; height:28px; overflow:hidden; margin-bottom:0; margin-left:-7px;}
+#review_form .comment-form-rating .stars span{display:block}
+#review_form .comment-form-rating .stars a{position:relative; display:inline-block; color:inherit; width:23px; text-indent:-1000em; overflow:hidden}
 #review_form .comment-form-rating .stars:hover a,
-#review_form .comment-form-rating .stars.has-active a {
-    color: #dc9814;
-}
-
+#review_form .comment-form-rating .stars.has-active a{color:#dc9814;}
 #review_form .comment-form-rating .stars a:hover ~ a,
-#review_form .comment-form-rating .stars.has-active a.active ~ a {
-    color: inherit;
-}
-
-#review_form .comment-form-rating .stars a:before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-family: 'nm-font';
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1;
-    content: "\e606";
-    text-indent: 0;
-}
-
+#review_form .comment-form-rating .stars.has-active a.active ~ a{color:inherit;}
+#review_form .comment-form-rating .stars a:before {position:absolute; top:0; left:0; font-family:'nm-font'; font-size:28px; font-style:normal; font-weight:400; line-height:1; content:"\e606"; text-indent:0;}
 .comment-form-rating .stars.selected span .star-1.active{color:#dc9814!important;}
 .comment-form-rating .stars.selected span .star-2.active{color:#dc9814!important;}
 .comment-form-rating .stars.selected span .star-3.active{color:#dc9814!important;}
