--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -21,7 +21,8 @@
 
 /* pestañas */
 .tabs.wc-tabs{padding-left:0; padding-top:18px; list-style:none;}
-.tabs.wc-tabs li a{margin:6px 0; color:var(--wp--preset--color--text); border-bottom:1px solid transparent;}
+.tabs.wc-tabs li{display:flex; align-items:center; height:38.59px;}
+.tabs.wc-tabs li a{color:var(--wp--preset--color--text); border-bottom:1px solid transparent; display:block; width:fit-content;}
 .tabs.wc-tabs li.active a{color:var(--wp--preset--color--title); border-bottom:1px solid var(--wp--preset--color--line);}
 
 /* star rating · puesta de calificación */
