--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -24,6 +24,8 @@
 .tabs.wc-tabs li{display:flex; align-items:center; height:38.59px;}
 .tabs.wc-tabs li a{color:var(--wp--preset--color--text); border-bottom:1px solid transparent; display:block; width:fit-content;}
 .tabs.wc-tabs li.active a{color:var(--wp--preset--color--title); border-bottom:1px solid var(--wp--preset--color--line);}
+    /* pestaña valoraciones */
+    #tabs-reviews span{position:relative; top:-7px; font-size:14px; color:var(--wp--preset--color--links);}
 
 /* star rating · puesta de calificación */
 #review_form .comment-form-rating .stars {display:inline-block; height:28px; overflow:hidden; margin-bottom:0; margin-left:-7px;}
