meta en single product

--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -33,7 +33,7 @@
     #comments .woocommerce-Reviews-title{display:none;}
 
 /* información meta */
-.meta-wrapper{padding:20px 0 18px; border-top:1px solid #e0e0e0; border-bottom:1px solid #e0e0e0; text-align:center;}
+.meta-wrapper{padding:20px 0 18px; border-top:1px solid #e0e0e0; border-bottom:1px solid #e0e0e0; text-align:center; font-size:14px;}
 .meta-wrapper .section .product-meta > *:not(:last-child){margin-right:14px;}
 
 /* star rating · puesta de calificación */
