meta en single product

--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -34,7 +34,7 @@
 
 /* información meta */
 .meta-wrapper{padding:20px 0 18px; border-top:1px solid #e0e0e0; border-bottom:1px solid #e0e0e0; text-align:center; font-size:14px;}
-.meta-wrapper .section .product-meta > span:not(:last-child){display:block; margin-right:14px;}
+.meta-wrapper .section .product_meta > span:not(:last-child){margin-right:14px;}
 
 /* star rating · puesta de calificación */
 #review_form .comment-form-rating .stars {display:inline-block; height:28px; overflow:hidden; margin-bottom:0; margin-left:-7px;}
